// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test base/home/CEDefaultScene should match snapshot when role is admin 1`] = `
<div>
  <section
    class="css-1wil037"
  >
    <div
      class="ant-row ant-row-no-wrap ant-row-middle step-container css-dev-only-do-not-override-txh9fw"
    >
      <div
        class="ant-col icon-wrapper css-dev-only-do-not-override-txh9fw"
        style="flex: 0 0 40px; min-width: 0;"
      >
        <span
          class="step-icon css-u3jcp4"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              id="icons/data-source"
            >
              <path
                d="M3 14.5C3 16.985 7.03 19 12 19C16.97 19 21 16.985 21 14.5V17.5C21 19.985 16.97 22 12 22C7.03 22 3 19.985 3 17.5V14.5ZM12 12C7.03 12 3 9.985 3 7.5C3 5.015 7.03 3 12 3C16.97 3 21 5.015 21 7.5C21 9.985 16.97 12 12 12Z"
                fill="white"
                fill-opacity="0.6"
                id="1"
              />
              <path
                d="M21 9.5V12.5C21 14.985 16.97 17 12 17C7.03 17 3 14.985 3 12.5V9.5C3 11.985 7.03 14 12 14C16.97 14 21 11.985 21 9.5Z"
                fill="white"
                id="2"
              />
            </g>
          </svg>
        </span>
      </div>
      <div
        class="ant-col step-box css-dev-only-do-not-override-txh9fw"
        style="flex-basis: auto; min-width: 0;"
      >
        <div
          class="title-wrapper"
        >
          <div
            class="inner-title-wrapper"
          >
            <div
              class="step-index"
            >
              STEP1
            </div>
            <div
              class="step-title"
            >
              数据源管理
            </div>
          </div>
        </div>
        <div
          class="ant-row ant-row-no-wrap css-dev-only-do-not-override-txh9fw"
        >
          <div
            class="ant-col ant-col-8 content-wrapper css-dev-only-do-not-override-txh9fw"
          >
            <div
              class="sub-title"
            >
              数据源管理
            </div>
            <div
              class="desc"
            >
              管理数据源相关操作
            </div>
            <div
              class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center actions"
              style="flex-wrap: wrap; margin-bottom: -8px;"
            >
              <div
                class="ant-space-item"
                style="margin-right: 8px; padding-bottom: 8px;"
              >
                <button
                  class="ant-btn css-dev-only-do-not-override-qzvrju ant-btn-default ant-btn-sm guidance-button-wrapper css-aj0zfl"
                  type="button"
                >
                  <div
                    class="ant-space css-dev-only-do-not-override-qzvrju ant-space-horizontal ant-space-align-center"
                  >
                    <div
                      class="ant-space-item"
                    >
                      查看列表
                    </div>
                  </div>
                </button>
              </div>
              <div
                class="ant-space-item"
                style="padding-bottom: 8px;"
              >
                <button
                  class="ant-btn css-dev-only-do-not-override-qzvrju ant-btn-default ant-btn-sm guidance-button-wrapper css-aj0zfl"
                  type="button"
                >
                  <div
                    class="ant-space css-dev-only-do-not-override-qzvrju ant-space-horizontal ant-space-align-center"
                  >
                    <div
                      class="ant-space-item"
                    >
                      添加数据源
                    </div>
                  </div>
                </button>
              </div>
            </div>
          </div>
          <div
            class="ant-col ant-col-8 content-wrapper css-dev-only-do-not-override-txh9fw"
          >
            <div
              class="sub-title"
            >
              外部数据源
            </div>
            <div
              class="desc"
            >
              管理外部数据源相关操作
            </div>
            <div
              class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center actions"
              style="flex-wrap: wrap; margin-bottom: -8px;"
            >
              <div
                class="ant-space-item"
                style="padding-bottom: 8px;"
              >
                <button
                  class="ant-btn css-dev-only-do-not-override-qzvrju ant-btn-default ant-btn-sm guidance-button-wrapper css-aj0zfl"
                  type="button"
                >
                  <div
                    class="ant-space css-dev-only-do-not-override-qzvrju ant-space-horizontal ant-space-align-center"
                  >
                    <div
                      class="ant-space-item"
                    >
                      查看列表
                    </div>
                  </div>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-row ant-row-no-wrap ant-row-middle step-container css-dev-only-do-not-override-txh9fw"
    >
      <div
        class="ant-col icon-wrapper css-dev-only-do-not-override-txh9fw"
        style="flex: 0 0 40px; min-width: 0;"
      >
        <span
          class="step-icon css-u3jcp4"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              id="icons/member"
            >
              <path
                d="M12 10C14.2091 10 16 8.20914 16 6C16 3.79086 14.2091 2 12 2C9.79086 2 8 3.79086 8 6C8 8.20914 9.79086 10 12 10ZM5.5 13C6.88071 13 8 11.8807 8 10.5C8 9.11929 6.88071 8 5.5 8C4.11929 8 3 9.11929 3 10.5C3 11.8807 4.11929 13 5.5 13ZM21 10.5C21 11.8807 19.8807 13 18.5 13C17.1193 13 16 11.8807 16 10.5C16 9.11929 17.1193 8 18.5 8C19.8807 8 21 9.11929 21 10.5ZM12 11C14.7614 11 17 13.2386 17 16V22H7V16C7 13.2386 9.23858 11 12 11ZM5 15.9999C5 15.307 5.10067 14.6376 5.28818 14.0056L5.11864 14.0204C3.36503 14.2104 2 15.6958 2 17.4999V21.9999H5V15.9999ZM22 21.9999V17.4999C22 15.6378 20.5459 14.1153 18.7118 14.0056C18.8993 14.6376 19 15.307 19 15.9999V21.9999H22Z"
                fill="white"
                fill-opacity="0.6"
                id="1"
              />
              <path
                d="M5.5 13C6.88071 13 8 11.8807 8 10.5C8 9.11929 6.88071 8 5.5 8C4.11929 8 3 9.11929 3 10.5C3 11.8807 4.11929 13 5.5 13ZM21 10.5C21 11.8807 19.8807 13 18.5 13C17.1193 13 16 11.8807 16 10.5C16 9.11929 17.1193 8 18.5 8C19.8807 8 21 9.11929 21 10.5ZM5 15.9999C5 15.307 5.10067 14.6376 5.28818 14.0056L5.11864 14.0204C3.36503 14.2104 2 15.6958 2 17.4999V21.9999H5V15.9999ZM22 21.9999V17.4999C22 15.6378 20.5459 14.1153 18.7118 14.0056C18.8993 14.6376 19 15.307 19 15.9999V21.9999H22Z"
                fill="white"
                id="2"
              />
            </g>
          </svg>
        </span>
      </div>
      <div
        class="ant-col step-box css-dev-only-do-not-override-txh9fw"
        style="flex-basis: auto; min-width: 0;"
      >
        <div
          class="title-wrapper"
        >
          <div
            class="inner-title-wrapper"
          >
            <div
              class="step-index"
            >
              STEP2
            </div>
            <div
              class="step-title"
            >
              成员与权限管理
            </div>
          </div>
        </div>
        <div
          class="ant-row ant-row-no-wrap css-dev-only-do-not-override-txh9fw"
        >
          <div
            class="ant-col ant-col-8 content-wrapper css-dev-only-do-not-override-txh9fw"
          >
            <div
              class="sub-title"
            >
              成员与权限管理
            </div>
            <div
              class="desc"
            >
              为项目添加成员/成员组，并配置相应的数据源操作权限
            </div>
            <div
              class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center actions"
              style="flex-wrap: wrap; margin-bottom: -8px;"
            >
              <div
                class="ant-space-item"
                style="padding-bottom: 8px;"
              >
                <button
                  class="ant-btn css-dev-only-do-not-override-qzvrju ant-btn-default ant-btn-sm guidance-button-wrapper css-aj0zfl"
                  type="button"
                >
                  <div
                    class="ant-space css-dev-only-do-not-override-qzvrju ant-space-horizontal ant-space-align-center"
                  >
                    <div
                      class="ant-space-item"
                    >
                      查看成员
                    </div>
                  </div>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-row ant-row-no-wrap ant-row-middle step-container css-dev-only-do-not-override-txh9fw"
    >
      <div
        class="ant-col icon-wrapper css-dev-only-do-not-override-txh9fw"
        style="flex: 0 0 40px; min-width: 0;"
      >
        <span
          class="step-icon css-u3jcp4"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              id="icons/lock"
            >
              <path
                d="M18 8H20C20.2652 8 20.5196 8.10536 20.7071 8.29289C20.8946 8.48043 21 8.73478 21 9V21C21 21.2652 20.8946 21.5196 20.7071 21.7071C20.5196 21.8946 20.2652 22 20 22H4C3.73478 22 3.48043 21.8946 3.29289 21.7071C3.10536 21.5196 3 21.2652 3 21V9C3 8.73478 3.10536 8.48043 3.29289 8.29289C3.48043 8.10536 3.73478 8 4 8H6V7C6 5.4087 6.63214 3.88258 7.75736 2.75736C8.88258 1.63214 10.4087 1 12 1C13.5913 1 15.1174 1.63214 16.2426 2.75736C17.3679 3.88258 18 5.4087 18 7V8ZM16 8V7C16 5.93913 15.5786 4.92172 14.8284 4.17157C14.0783 3.42143 13.0609 3 12 3C10.9391 3 9.92172 3.42143 9.17157 4.17157C8.42143 4.92172 8 5.93913 8 7V8H16ZM11 14V16H13V14H11ZM7 14V16H9V14H7ZM15 14V16H17V14H15Z"
                fill="white"
                fill-opacity="0.6"
                id="1"
              />
              <path
                d="M16 8V7C16 4.79086 14.2091 3 12 3C9.79086 3 8 4.79086 8 7V8H6V7C6 3.68629 8.68629 1 12 1C15.3137 1 18 3.68629 18 7V8H16Z"
                fill="white"
                id="2"
              />
            </g>
          </svg>
        </span>
      </div>
      <div
        class="ant-col step-box css-dev-only-do-not-override-txh9fw"
        style="flex-basis: auto; min-width: 0;"
      >
        <div
          class="title-wrapper"
        >
          <div
            class="inner-title-wrapper"
          >
            <div
              class="step-index"
            >
              STEP3
            </div>
            <div
              class="step-title"
            >
              数据安全规则管理
            </div>
          </div>
        </div>
        <div
          class="ant-row ant-row-no-wrap css-dev-only-do-not-override-txh9fw"
        >
          <div
            class="ant-col ant-col-8 content-wrapper css-dev-only-do-not-override-txh9fw"
          >
            <div
              class="sub-title"
            >
              审核管理
            </div>
            <div
              class="desc"
            >
              查看平台支持的审核规则，并自定义审核规则模板，监察已生成的SQL，或使用SQL审核改善SQL质量
            </div>
            <div
              class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center actions"
              style="flex-wrap: wrap; margin-bottom: -8px;"
            >
              <div
                class="ant-space-item"
                style="margin-right: 8px; padding-bottom: 8px;"
              >
                <button
                  class="ant-btn css-dev-only-do-not-override-qzvrju ant-btn-default ant-btn-sm guidance-button-wrapper css-aj0zfl"
                  type="button"
                >
                  <div
                    class="ant-space css-dev-only-do-not-override-qzvrju ant-space-horizontal ant-space-align-center"
                  >
                    <div
                      class="ant-space-item"
                    >
                      查看审核规则
                    </div>
                  </div>
                </button>
              </div>
              <div
                class="ant-space-item"
                style="margin-right: 8px; padding-bottom: 8px;"
              >
                <button
                  class="ant-btn css-dev-only-do-not-override-qzvrju ant-btn-default ant-btn-sm guidance-button-wrapper css-aj0zfl"
                  type="button"
                >
                  <div
                    class="ant-space css-dev-only-do-not-override-qzvrju ant-space-horizontal ant-space-align-center"
                  >
                    <div
                      class="ant-space-item"
                    >
                      查看规则模板
                    </div>
                  </div>
                </button>
              </div>
              <div
                class="ant-space-item"
                style="margin-right: 8px; padding-bottom: 8px;"
              >
                <button
                  class="ant-btn css-dev-only-do-not-override-qzvrju ant-btn-default ant-btn-sm guidance-button-wrapper css-aj0zfl"
                  type="button"
                >
                  <div
                    class="ant-space css-dev-only-do-not-override-qzvrju ant-space-horizontal ant-space-align-center"
                  >
                    <div
                      class="ant-space-item"
                    >
                       查看智能扫描
                    </div>
                  </div>
                </button>
              </div>
              <div
                class="ant-space-item"
                style="padding-bottom: 8px;"
              >
                <button
                  class="ant-btn css-dev-only-do-not-override-qzvrju ant-btn-default ant-btn-sm guidance-button-wrapper css-aj0zfl"
                  type="button"
                >
                  <div
                    class="ant-space css-dev-only-do-not-override-qzvrju ant-space-horizontal ant-space-align-center"
                  >
                    <div
                      class="ant-space-item"
                    >
                      新建SQL审核
                    </div>
                  </div>
                </button>
              </div>
            </div>
          </div>
          <div
            class="ant-col ant-col-8 content-wrapper css-dev-only-do-not-override-txh9fw"
          >
            <div
              class="sub-title"
            >
              数据源授权管理
            </div>
            <div
              class="desc"
            >
              配置数据权限模版，将数据权限模版授权给指定用户
            </div>
            <div
              class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center actions"
              style="flex-wrap: wrap; margin-bottom: -8px;"
            >
              <div
                class="ant-space-item"
                style="margin-right: 8px; padding-bottom: 8px;"
              >
                <button
                  class="ant-btn css-dev-only-do-not-override-qzvrju ant-btn-default ant-btn-sm guidance-button-wrapper css-aj0zfl"
                  type="button"
                >
                  <div
                    class="ant-space css-dev-only-do-not-override-qzvrju ant-space-horizontal ant-space-align-center"
                  >
                    <div
                      class="ant-space-item"
                    >
                      权限模板
                    </div>
                  </div>
                </button>
              </div>
              <div
                class="ant-space-item"
                style="padding-bottom: 8px;"
              >
                <button
                  class="ant-btn css-dev-only-do-not-override-qzvrju ant-btn-default ant-btn-sm guidance-button-wrapper css-aj0zfl"
                  type="button"
                >
                  <div
                    class="ant-space css-dev-only-do-not-override-qzvrju ant-space-horizontal ant-space-align-center"
                  >
                    <div
                      class="ant-space-item"
                    >
                      授权清单
                    </div>
                  </div>
                </button>
              </div>
            </div>
          </div>
          <div
            class="ant-col ant-col-8 content-wrapper css-dev-only-do-not-override-txh9fw"
          >
            <div
              class="sub-title"
            >
              审批流程
            </div>
            <div
              class="desc"
            >
              根据实际业务流转变更流程模板
            </div>
            <div
              class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center actions"
              style="flex-wrap: wrap; margin-bottom: -8px;"
            >
              <div
                class="ant-space-item"
                style="padding-bottom: 8px;"
              >
                <button
                  class="ant-btn css-dev-only-do-not-override-qzvrju ant-btn-default ant-btn-sm guidance-button-wrapper css-aj0zfl"
                  type="button"
                >
                  <div
                    class="ant-space css-dev-only-do-not-override-qzvrju ant-space-horizontal ant-space-align-center"
                  >
                    <div
                      class="ant-space-item"
                    >
                      配置审批流程模板
                    </div>
                  </div>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-row ant-row-no-wrap ant-row-middle step-container css-dev-only-do-not-override-txh9fw"
    >
      <div
        class="ant-col icon-wrapper css-dev-only-do-not-override-txh9fw"
        style="flex: 0 0 40px; min-width: 0;"
      >
        <span
          class="step-icon css-u3jcp4"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              id="icons/rule"
            >
              <path
                d="M5.83333 1.5C5.09695 1.5 4.5 2.09695 4.5 2.83333V3.5H18.1667C18.903 3.5 19.5 4.09695 19.5 4.83333V20.1667C19.5 20.2818 19.4854 20.3935 19.458 20.5H20.1667C20.903 20.5 21.5 19.903 21.5 19.1667V2.83333C21.5 2.09695 20.903 1.5 20.1667 1.5H5.83333Z"
                fill="white"
                id="2"
              />
              <path
                clip-rule="evenodd"
                d="M3.83333 3.5C3.09695 3.5 2.5 4.09695 2.5 4.83333V21.1667C2.5 21.903 3.09695 22.5 3.83333 22.5H18.1667C18.903 22.5 19.5 21.903 19.5 21.1667V4.83333C19.5 4.09695 18.903 3.5 18.1667 3.5H3.83333ZM7 9.66667C7 9.29848 7.29848 9 7.66667 9H14.3333C14.7015 9 15 9.29848 15 9.66667V10.3333C15 10.7015 14.7015 11 14.3333 11H7.66667C7.29848 11 7 10.7015 7 10.3333V9.66667ZM7 14.6667C7 14.2985 7.29848 14 7.66667 14H11.3333C11.7015 14 12 14.2985 12 14.6667V15.3333C12 15.7015 11.7015 16 11.3333 16H7.66667C7.29848 16 7 15.7015 7 15.3333V14.6667Z"
                fill="white"
                fill-opacity="0.6"
                fill-rule="evenodd"
                id="1"
              />
            </g>
          </svg>
        </span>
      </div>
      <div
        class="ant-col step-box css-dev-only-do-not-override-txh9fw"
        style="flex-basis: auto; min-width: 0;"
      >
        <div
          class="title-wrapper"
        >
          <div
            class="inner-title-wrapper"
          >
            <div
              class="step-index"
            >
              STEP4
            </div>
            <div
              class="step-title"
            >
              数据查询与变更
            </div>
          </div>
        </div>
        <div
          class="ant-row ant-row-no-wrap css-dev-only-do-not-override-txh9fw"
        >
          <div
            class="ant-col ant-col-8 content-wrapper css-dev-only-do-not-override-txh9fw"
          >
            <div
              class="sub-title"
            >
              SQL窗口
            </div>
            <div
              class="desc"
            >
              使用在线的数据编辑器（CloudBeaver）进行SQL查询和编辑
            </div>
            <div
              class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center actions"
              style="flex-wrap: wrap; margin-bottom: -8px;"
            >
              <div
                class="ant-space-item"
                style="padding-bottom: 8px;"
              >
                <button
                  class="ant-btn css-dev-only-do-not-override-qzvrju ant-btn-default ant-btn-sm guidance-button-wrapper css-aj0zfl"
                  type="button"
                >
                  <div
                    class="ant-space css-dev-only-do-not-override-qzvrju ant-space-horizontal ant-space-align-center"
                  >
                    <div
                      class="ant-space-item"
                    >
                      进入SQL工作台
                    </div>
                  </div>
                </button>
              </div>
            </div>
          </div>
          <div
            class="ant-col ant-col-8 content-wrapper css-dev-only-do-not-override-txh9fw"
          >
            <div
              class="sub-title"
            >
              数据变更
            </div>
            <div
              class="desc"
            >
              在线提起SQL变更申请，经由审批流程完成上线
            </div>
            <div
              class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center actions"
              style="flex-wrap: wrap; margin-bottom: -8px;"
            >
              <div
                class="ant-space-item"
                style="padding-bottom: 8px;"
              >
                <button
                  class="ant-btn css-dev-only-do-not-override-qzvrju ant-btn-default ant-btn-sm guidance-button-wrapper css-aj0zfl"
                  type="button"
                >
                  <div
                    class="ant-space css-dev-only-do-not-override-qzvrju ant-space-horizontal ant-space-align-center"
                  >
                    <div
                      class="ant-space-item"
                    >
                      发起SQL工单
                    </div>
                  </div>
                </button>
              </div>
            </div>
          </div>
          <div
            class="ant-col ant-col-8 content-wrapper css-dev-only-do-not-override-txh9fw"
          >
            <div
              class="sub-title"
            >
              数据导出
            </div>
            <div
              class="desc"
            >
              发起数据导出工单，审核通过后获取数据集。
            </div>
            <div
              class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center actions"
              style="flex-wrap: wrap; margin-bottom: -8px;"
            >
              <div
                class="ant-space-item"
                style="padding-bottom: 8px;"
              >
                <button
                  class="ant-btn css-dev-only-do-not-override-qzvrju ant-btn-default ant-btn-sm guidance-button-wrapper css-aj0zfl"
                  type="button"
                >
                  <div
                    class="ant-space css-dev-only-do-not-override-qzvrju ant-space-horizontal ant-space-align-center"
                  >
                    <div
                      class="ant-space-item"
                    >
                      发起导出工单
                    </div>
                  </div>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-row ant-row-no-wrap ant-row-middle step-container css-dev-only-do-not-override-txh9fw"
    >
      <div
        class="ant-col icon-wrapper css-dev-only-do-not-override-txh9fw"
        style="flex: 0 0 40px; min-width: 0;"
      >
        <span
          class="step-icon css-u3jcp4"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              id="icons/tool"
            >
              <path
                d="M5.32992 3.271C5.95397 3.04837 6.62839 3.00745 7.27478 3.153C7.92116 3.29855 8.51296 3.62458 8.98136 4.09319C9.44977 4.5618 9.77553 5.15374 9.92079 5.8002C10.066 6.44665 10.0248 7.12105 9.80192 7.745L20.6469 18.59L18.5249 20.711L7.67992 9.867C7.05587 10.0896 6.38145 10.1305 5.73506 9.985C5.08868 9.83945 4.49688 9.51342 4.02848 9.04481C3.56008 8.5762 3.23431 7.98425 3.08905 7.3378C2.9438 6.69135 2.98502 6.01695 3.20792 5.393L5.44392 7.63C5.58229 7.77326 5.74781 7.88754 5.93081 7.96615C6.11382 8.04476 6.31065 8.08614 6.50982 8.08787C6.70899 8.08961 6.90651 8.05165 7.09085 7.97623C7.2752 7.90081 7.44268 7.78943 7.58351 7.64859C7.72435 7.50775 7.83573 7.34027 7.91115 7.15593C7.98658 6.97159 8.02453 6.77407 8.0228 6.5749C8.02107 6.37573 7.97969 6.1789 7.90107 5.99589C7.82246 5.81289 7.70819 5.64737 7.56492 5.509L5.32892 3.27L5.32992 3.271ZM15.6969 5.155L18.8789 3.387L20.2929 4.801L18.5249 7.983L16.7569 8.337L14.6369 10.458L13.2219 9.044L15.3429 6.923L15.6969 5.155ZM8.62592 12.933L10.7469 15.055L5.79692 20.005C5.52396 20.2754 5.15764 20.4308 4.7735 20.439C4.38937 20.4473 4.01671 20.3078 3.73237 20.0494C3.44804 19.791 3.27372 19.4333 3.24535 19.0501C3.21699 18.6669 3.33674 18.2875 3.57992 17.99L3.67692 17.883L8.62692 12.933H8.62592Z"
                fill="white"
                fill-opacity="0.6"
                id="1"
              />
              <path
                d="M15.6969 5.15499L18.8789 3.38699L20.2929 4.80099L18.5249 7.98299L16.7569 8.33699L14.6369 10.458L13.2219 9.04399L15.3429 6.92299L15.6969 5.15499ZM8.62588 12.933L10.7469 15.055L5.79688 20.005C5.52391 20.2754 5.15759 20.4308 4.77346 20.439C4.38932 20.4473 4.01666 20.3078 3.73233 20.0494C3.448 19.791 3.27367 19.4333 3.24531 19.0501C3.21694 18.6669 3.3367 18.2875 3.57988 17.99L3.67688 17.883L8.62588 12.933Z"
                fill="white"
                id="2"
              />
            </g>
          </svg>
        </span>
      </div>
      <div
        class="ant-col step-box css-dev-only-do-not-override-txh9fw"
        style="flex-basis: auto; min-width: 0;"
      >
        <div
          class="title-wrapper"
        >
          <div
            class="inner-title-wrapper"
          >
            <div
              class="step-index"
            >
              STEP5
            </div>
            <div
              class="step-title"
            >
              运维与审计
            </div>
          </div>
        </div>
        <div
          class="ant-row ant-row-no-wrap css-dev-only-do-not-override-txh9fw"
        >
          <div
            class="ant-col ant-col-8 content-wrapper css-dev-only-do-not-override-txh9fw"
          >
            <div
              class="sub-title"
            >
              操作审计
            </div>
            <div
              class="desc"
            >
              审计平台内用户操作
            </div>
            <div
              class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center actions"
              style="flex-wrap: wrap; margin-bottom: -8px;"
            >
              <div
                class="ant-space-item"
                style="margin-right: 8px; padding-bottom: 8px;"
              >
                <button
                  class="ant-btn css-dev-only-do-not-override-qzvrju ant-btn-default ant-btn-sm guidance-button-wrapper css-aj0zfl"
                  type="button"
                >
                  <div
                    class="ant-space css-dev-only-do-not-override-qzvrju ant-space-horizontal ant-space-align-center"
                  >
                    <div
                      class="ant-space-item"
                    >
                      授权审计
                    </div>
                  </div>
                </button>
              </div>
              <div
                class="ant-space-item"
                style="margin-right: 8px; padding-bottom: 8px;"
              >
                <button
                  class="ant-btn css-dev-only-do-not-override-qzvrju ant-btn-default ant-btn-sm guidance-button-wrapper css-aj0zfl"
                  type="button"
                >
                  <div
                    class="ant-space css-dev-only-do-not-override-qzvrju ant-space-horizontal ant-space-align-center"
                  >
                    <div
                      class="ant-space-item"
                    >
                      权限模板审计
                    </div>
                  </div>
                </button>
              </div>
              <div
                class="ant-space-item"
                style="margin-right: 8px; padding-bottom: 8px;"
              >
                <button
                  class="ant-btn css-dev-only-do-not-override-qzvrju ant-btn-default ant-btn-sm guidance-button-wrapper css-aj0zfl"
                  type="button"
                >
                  <div
                    class="ant-space css-dev-only-do-not-override-qzvrju ant-space-horizontal ant-space-align-center"
                  >
                    <div
                      class="ant-space-item"
                    >
                      数据源操作审计
                    </div>
                  </div>
                </button>
              </div>
              <div
                class="ant-space-item"
                style="padding-bottom: 8px;"
              >
                <button
                  class="ant-btn css-dev-only-do-not-override-qzvrju ant-btn-default ant-btn-sm guidance-button-wrapper css-aj0zfl"
                  type="button"
                >
                  <div
                    class="ant-space css-dev-only-do-not-override-qzvrju ant-space-horizontal ant-space-align-center"
                  >
                    <div
                      class="ant-space-item"
                    >
                      SQLE操作记录
                    </div>
                  </div>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`test base/home/CEDefaultScene should match snapshot when role is not admin 1`] = `
<div>
  <section
    class="css-1wil037"
  >
    <div
      class="ant-row ant-row-no-wrap ant-row-middle step-container css-dev-only-do-not-override-txh9fw"
    >
      <div
        class="ant-col icon-wrapper css-dev-only-do-not-override-txh9fw"
        style="flex: 0 0 40px; min-width: 0;"
      >
        <span
          class="step-icon css-u3jcp4"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              id="icons/rule"
            >
              <path
                d="M5.83333 1.5C5.09695 1.5 4.5 2.09695 4.5 2.83333V3.5H18.1667C18.903 3.5 19.5 4.09695 19.5 4.83333V20.1667C19.5 20.2818 19.4854 20.3935 19.458 20.5H20.1667C20.903 20.5 21.5 19.903 21.5 19.1667V2.83333C21.5 2.09695 20.903 1.5 20.1667 1.5H5.83333Z"
                fill="white"
                id="2"
              />
              <path
                clip-rule="evenodd"
                d="M3.83333 3.5C3.09695 3.5 2.5 4.09695 2.5 4.83333V21.1667C2.5 21.903 3.09695 22.5 3.83333 22.5H18.1667C18.903 22.5 19.5 21.903 19.5 21.1667V4.83333C19.5 4.09695 18.903 3.5 18.1667 3.5H3.83333ZM7 9.66667C7 9.29848 7.29848 9 7.66667 9H14.3333C14.7015 9 15 9.29848 15 9.66667V10.3333C15 10.7015 14.7015 11 14.3333 11H7.66667C7.29848 11 7 10.7015 7 10.3333V9.66667ZM7 14.6667C7 14.2985 7.29848 14 7.66667 14H11.3333C11.7015 14 12 14.2985 12 14.6667V15.3333C12 15.7015 11.7015 16 11.3333 16H7.66667C7.29848 16 7 15.7015 7 15.3333V14.6667Z"
                fill="white"
                fill-opacity="0.6"
                fill-rule="evenodd"
                id="1"
              />
            </g>
          </svg>
        </span>
      </div>
      <div
        class="ant-col step-box css-dev-only-do-not-override-txh9fw"
        style="flex-basis: auto; min-width: 0;"
      >
        <div
          class="title-wrapper"
        >
          <div
            class="inner-title-wrapper"
          >
            <div
              class="step-index"
            >
              STEP1
            </div>
            <div
              class="step-title"
            >
              数据查询与变更
            </div>
          </div>
        </div>
        <div
          class="ant-row ant-row-no-wrap css-dev-only-do-not-override-txh9fw"
        >
          <div
            class="ant-col ant-col-8 content-wrapper css-dev-only-do-not-override-txh9fw"
          >
            <div
              class="sub-title"
            >
              SQL窗口
            </div>
            <div
              class="desc"
            >
              使用在线的数据编辑器（CloudBeaver）进行SQL查询和编辑
            </div>
            <div
              class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center actions"
              style="flex-wrap: wrap; margin-bottom: -8px;"
            >
              <div
                class="ant-space-item"
                style="padding-bottom: 8px;"
              >
                <button
                  class="ant-btn css-dev-only-do-not-override-qzvrju ant-btn-default ant-btn-sm guidance-button-wrapper css-aj0zfl"
                  type="button"
                >
                  <div
                    class="ant-space css-dev-only-do-not-override-qzvrju ant-space-horizontal ant-space-align-center"
                  >
                    <div
                      class="ant-space-item"
                    >
                      进入SQL工作台
                    </div>
                  </div>
                </button>
              </div>
            </div>
          </div>
          <div
            class="ant-col ant-col-8 content-wrapper css-dev-only-do-not-override-txh9fw"
          >
            <div
              class="sub-title"
            >
              数据变更
            </div>
            <div
              class="desc"
            >
              在线提起SQL变更申请，经由审批流程完成上线
            </div>
            <div
              class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center actions"
              style="flex-wrap: wrap; margin-bottom: -8px;"
            >
              <div
                class="ant-space-item"
                style="padding-bottom: 8px;"
              >
                <button
                  class="ant-btn css-dev-only-do-not-override-qzvrju ant-btn-default ant-btn-sm guidance-button-wrapper css-aj0zfl"
                  type="button"
                >
                  <div
                    class="ant-space css-dev-only-do-not-override-qzvrju ant-space-horizontal ant-space-align-center"
                  >
                    <div
                      class="ant-space-item"
                    >
                      发起SQL工单
                    </div>
                  </div>
                </button>
              </div>
            </div>
          </div>
          <div
            class="ant-col ant-col-8 content-wrapper css-dev-only-do-not-override-txh9fw"
          >
            <div
              class="sub-title"
            >
              数据导出
            </div>
            <div
              class="desc"
            >
              发起数据导出工单，审核通过后获取数据集。
            </div>
            <div
              class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center actions"
              style="flex-wrap: wrap; margin-bottom: -8px;"
            >
              <div
                class="ant-space-item"
                style="padding-bottom: 8px;"
              >
                <button
                  class="ant-btn css-dev-only-do-not-override-qzvrju ant-btn-default ant-btn-sm guidance-button-wrapper css-aj0zfl"
                  type="button"
                >
                  <div
                    class="ant-space css-dev-only-do-not-override-qzvrju ant-space-horizontal ant-space-align-center"
                  >
                    <div
                      class="ant-space-item"
                    >
                      发起导出工单
                    </div>
                  </div>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-row ant-row-no-wrap ant-row-middle step-container css-dev-only-do-not-override-txh9fw"
    >
      <div
        class="ant-col icon-wrapper css-dev-only-do-not-override-txh9fw"
        style="flex: 0 0 40px; min-width: 0;"
      >
        <span
          class="step-icon css-u3jcp4"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              id="icons/tool"
            >
              <path
                d="M5.32992 3.271C5.95397 3.04837 6.62839 3.00745 7.27478 3.153C7.92116 3.29855 8.51296 3.62458 8.98136 4.09319C9.44977 4.5618 9.77553 5.15374 9.92079 5.8002C10.066 6.44665 10.0248 7.12105 9.80192 7.745L20.6469 18.59L18.5249 20.711L7.67992 9.867C7.05587 10.0896 6.38145 10.1305 5.73506 9.985C5.08868 9.83945 4.49688 9.51342 4.02848 9.04481C3.56008 8.5762 3.23431 7.98425 3.08905 7.3378C2.9438 6.69135 2.98502 6.01695 3.20792 5.393L5.44392 7.63C5.58229 7.77326 5.74781 7.88754 5.93081 7.96615C6.11382 8.04476 6.31065 8.08614 6.50982 8.08787C6.70899 8.08961 6.90651 8.05165 7.09085 7.97623C7.2752 7.90081 7.44268 7.78943 7.58351 7.64859C7.72435 7.50775 7.83573 7.34027 7.91115 7.15593C7.98658 6.97159 8.02453 6.77407 8.0228 6.5749C8.02107 6.37573 7.97969 6.1789 7.90107 5.99589C7.82246 5.81289 7.70819 5.64737 7.56492 5.509L5.32892 3.27L5.32992 3.271ZM15.6969 5.155L18.8789 3.387L20.2929 4.801L18.5249 7.983L16.7569 8.337L14.6369 10.458L13.2219 9.044L15.3429 6.923L15.6969 5.155ZM8.62592 12.933L10.7469 15.055L5.79692 20.005C5.52396 20.2754 5.15764 20.4308 4.7735 20.439C4.38937 20.4473 4.01671 20.3078 3.73237 20.0494C3.44804 19.791 3.27372 19.4333 3.24535 19.0501C3.21699 18.6669 3.33674 18.2875 3.57992 17.99L3.67692 17.883L8.62692 12.933H8.62592Z"
                fill="white"
                fill-opacity="0.6"
                id="1"
              />
              <path
                d="M15.6969 5.15499L18.8789 3.38699L20.2929 4.80099L18.5249 7.98299L16.7569 8.33699L14.6369 10.458L13.2219 9.04399L15.3429 6.92299L15.6969 5.15499ZM8.62588 12.933L10.7469 15.055L5.79688 20.005C5.52391 20.2754 5.15759 20.4308 4.77346 20.439C4.38932 20.4473 4.01666 20.3078 3.73233 20.0494C3.448 19.791 3.27367 19.4333 3.24531 19.0501C3.21694 18.6669 3.3367 18.2875 3.57988 17.99L3.67688 17.883L8.62588 12.933Z"
                fill="white"
                id="2"
              />
            </g>
          </svg>
        </span>
      </div>
      <div
        class="ant-col step-box css-dev-only-do-not-override-txh9fw"
        style="flex-basis: auto; min-width: 0;"
      >
        <div
          class="title-wrapper"
        >
          <div
            class="inner-title-wrapper"
          >
            <div
              class="step-index"
            >
              STEP2
            </div>
            <div
              class="step-title"
            >
              运维与审计
            </div>
          </div>
        </div>
        <div
          class="ant-row ant-row-no-wrap css-dev-only-do-not-override-txh9fw"
        >
          <div
            class="ant-col ant-col-8 content-wrapper css-dev-only-do-not-override-txh9fw"
          >
            <div
              class="sub-title"
            >
              操作审计
            </div>
            <div
              class="desc"
            >
              审计平台内用户操作
            </div>
            <div
              class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center actions"
              style="flex-wrap: wrap; margin-bottom: -8px;"
            >
              <div
                class="ant-space-item"
                style="margin-right: 8px; padding-bottom: 8px;"
              >
                <button
                  class="ant-btn css-dev-only-do-not-override-qzvrju ant-btn-default ant-btn-sm guidance-button-wrapper css-aj0zfl"
                  type="button"
                >
                  <div
                    class="ant-space css-dev-only-do-not-override-qzvrju ant-space-horizontal ant-space-align-center"
                  >
                    <div
                      class="ant-space-item"
                    >
                      授权审计
                    </div>
                  </div>
                </button>
              </div>
              <div
                class="ant-space-item"
                style="margin-right: 8px; padding-bottom: 8px;"
              >
                <button
                  class="ant-btn css-dev-only-do-not-override-qzvrju ant-btn-default ant-btn-sm guidance-button-wrapper css-aj0zfl"
                  type="button"
                >
                  <div
                    class="ant-space css-dev-only-do-not-override-qzvrju ant-space-horizontal ant-space-align-center"
                  >
                    <div
                      class="ant-space-item"
                    >
                      权限模板审计
                    </div>
                  </div>
                </button>
              </div>
              <div
                class="ant-space-item"
                style="padding-bottom: 8px;"
              >
                <button
                  class="ant-btn css-dev-only-do-not-override-qzvrju ant-btn-default ant-btn-sm guidance-button-wrapper css-aj0zfl"
                  type="button"
                >
                  <div
                    class="ant-space css-dev-only-do-not-override-qzvrju ant-space-horizontal ant-space-align-center"
                  >
                    <div
                      class="ant-space-item"
                    >
                      数据源操作审计
                    </div>
                  </div>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
</div>
`;
